fix merge on mobile in /btn_row/ & clean comments & spaces

--- a/modest/css/grid.css
+++ b/modest/css/grid.css
@@ -10,9 +10,7 @@
 .col-xs-2{
     width: 66%;
 }
-/* .col-xs-4{
-    width: 220px;
-} */
+
 
 
 
