--- a/modest/css/style.css
+++ b/modest/css/style.css
@@ -36,7 +36,6 @@ body{
 .header_row{
     flex-direction: column;
     align-items: center;
-    
 }
 .logo{
     margin-top: 5px ;
@@ -57,11 +56,9 @@ body{
     border: 2px solid #1d2126;
 }
 .nav_menu>li>a:hover{
-    
     border: 2px solid #5b6168;
     border-radius: 4px;
     transition: 0.2s linear;
-    
 }
 .nav_menu>li>a:active{
     color: #23b7a4;
@@ -113,7 +110,6 @@ body{
     border-left: 10px solid #e1e6ea;
     text-transform: uppercase;
     font-family: 'Quattrocento Sans', sans-serif;
-    
 }
 .dark_section_title{
     color: #fff;
@@ -194,7 +190,6 @@ hr{
 /* team */
 
 .member{
-    /* height: 375px; */
     background-color: #e1e6ea;
     position: relative;
     margin-bottom: 20px;
@@ -327,7 +322,6 @@ hr{
 }
 .work_col:hover{
     cursor: pointer;
-
 }
 .work_col:hover>.work_img_text{
     opacity: 1;
@@ -363,7 +357,6 @@ hr{
 }
 .btn_row{
     align-items: flex-end;
-    margin-top: 0;
     justify-content: start;
 }
 .contact_btn{
@@ -371,8 +364,6 @@ hr{
     border: 2px solid #3a454d;
     margin-top: 0;
     margin-right: 0;
-    
-
 }
 .btn:hover{
     background-color: #23b7a4;
@@ -385,7 +376,6 @@ hr{
 
 /* services */
 .services_row{
-    /* flex-direction: column; */
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -508,7 +498,6 @@ justify-content: flex-end;
 }
 .btn_row{
     justify-content: center;
-    
 }
 
 
@@ -565,8 +554,6 @@ justify-content: flex-end;
     display: flex;
     width: 280px;
     overflow-x: auto;
-    
-    
 }
 .search{
     padding: 5px 50px 5px 10px;
@@ -622,7 +609,6 @@ justify-content: flex-end;
 }
 
 .btn_row{
-    margin-top: 40px;
     justify-content: center;
 }
 
@@ -639,6 +625,5 @@ justify-content: flex-end;
     justify-content: center;
     align-items: center;
 }
-
 
 }
